update validator specs

--- a/apis/builder/validators.yaml
+++ b/apis/builder/validators.yaml
@@ -2,7 +2,7 @@ post:
   operationId: "registerValidator"
   summary: Register or update a validator's block building preferences.
   description: |
-    Registers a validator's preferred fee recipient and gas limit.
+    Registers a validator's preferred fee recipient, gas limit and validator commitment.
 
     A success response (200) indicates that the registration was valid. If the
     registration passes validation, then the builder MUST integrate the
